--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -12,7 +12,7 @@
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13158761.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/06/id13000486-GettyImages-1311107771@1200x1200-320x200.jpg" align ="left"></a><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13158761.md#1" target="_blank">特斯拉7月在华销售环比下滑近七成</a><br></h3>今年7月份，特斯拉在大陆的销售仅为8,621辆，比6月份的销售环比......<br><img align="bottom" src="https://raw.githubusercontent.com/vbtdby377/www/master/t/ntdtv/time.gif">08月13日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159411.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/07/id13114195-508408-320x200.jpg" align ="left"></a><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159411.md#1" target="_blank">【翻墙必看】中共喉舌深夜发文 习或渡过难关</a><br></h3>大纪元每天为读者梳理翻墙必看的文章...<br><img align="bottom" src="https://raw.githubusercontent.com/vbtdby377/www/master/t/ntdtv/time.gif">08月13日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159430.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159430.md#1" target="_blank">沈阳公安局长杨建军被查 其下属两个月前落马</a><br></h3>8月12日，中共辽宁省沈阳市副市长，市公安局党委书记、局长杨建军涉......<br><img align="bottom" src="https://raw.githubusercontent.com/vbtdby377/www/master/t/ntdtv/time.gif">08月13日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159185.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159270-2015-robert-atkinson-320x200.jpg" align ="left"></a><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159185.md#1" target="_blank">【专访】美智库主席：中国没有真正的资本主义</a><br></h3>中国有私人企业，但是经理人没有自主权。中国公司到美国上市，美国人买......<br><img align="bottom" src="https://raw.githubusercontent.com/vbtdby377/www/master/t/ntdtv/time.gif">08月13日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159185.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159270-2015-robert-atkinson-320x200.jpg" align ="left"></a><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159185.md#1" target="_blank">专访美智库主席：中国没有真正的资本主义</a><br></h3>中国有私人企业，但是经理人没有自主权。中国公司到美国上市，美国人买......<br><img align="bottom" src="https://raw.githubusercontent.com/vbtdby377/www/master/t/ntdtv/time.gif">08月13日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159180.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2016/06/20160616_gaokao-320x200.jpg" align ="left"></a><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159180.md#1" target="_blank">北京严厉打击课外培训 令昂贵家教转入地下</a><br></h3>最近，中共针对规模约为1000亿美元的校外教育培训行业，展开了一次......<br><img align="bottom" src="https://raw.githubusercontent.com/vbtdby377/www/master/t/ntdtv/time.gif">08月13日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13158773.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2019/12/7fd102fa91e4776fb275d1eefdb908ee-600x400-320x200.jpg" align ="left"></a><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13158773.md#1" target="_blank">分析：习近平当局伸出干预市场的第三只手</a><br></h3>今年以来，当局发起的监管风暴斩落不少明星企业。现在官媒亦加入这场惊......<br><img align="bottom" src="https://raw.githubusercontent.com/vbtdby377/www/master/t/ntdtv/time.gif">08月13日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159093.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159093.md#1" target="_blank">江西教师建议“与病毒共存” 被拘留15天</a><br></h3>中国大陆围绕防疫路线的争论趋向政治化，江西丰城市一名中学教师因建议......<br><img align="bottom" src="https://raw.githubusercontent.com/vbtdby377/www/master/t/ntdtv/time.gif">08月13日</td></tr>
