--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -2,7 +2,7 @@
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159862.md#1" target="_blank">美国男子在海滩钓鱼 竟然钓到大白鲨</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159862.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159875-shark-2102330_1920-320x200.jpg" align ="left"></a>正当夏天的脚步将逐渐离去时，美国麻萨诸塞州25岁男子皮塞克（Matt Pieciak）前往海滩钓鱼，但令他意想不到的是，竟然有一头大白鲨上钩。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 5:39 PM	</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159580.md#1" target="_blank">游历地狱23分钟 美国男子著书披露见闻</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159580.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159586-fire-1008926_1920-150x120.jpg" align ="left"></a>美国男子维泽（Bill Wiese）自称在一次濒死体验中灵魂出窍，并游历地狱23分钟。他不但目睹人们受刑的惨状，连他自己的血肉也被恶魔撕裂。他以这次的经历证明地狱是真实存在的，而且将他的见闻着作成书，以警醒世人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 3:30 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159371.md#1" target="_blank">50%的人本就能抗新冠 天然免疫胜过疫苗？</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159371.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159543-shutterstock2_1800070318-150x120.jpg" align ="left"></a>最近，随着Delta变种迅速蔓延全球，疫苗的保护率也下降，接种疫苗后发生的突破感染案例越来越多。事实上，除了疫苗，人体还有天然的免疫力，可以帮助抵御新冠病毒。科学界慢慢认识到，人若要抗击新冠，可能需要自身天然的免疫力。有20%～50%的健康人早在新冠病毒出现之前，体内就预先存在了针对新冠病毒的T细胞免疫力。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 3:26 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/12/n13157087.md#1" target="_blank">室内蕨类盆栽种类多好看又耐活 栽种5要点</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/12/n13157087.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159343-shutterstock_1998562946-150x120.jpg" align ="left"></a>室内栽种蕨类植物优点很多，好养好看又耐活。首先选择最适合作为室内植物的蕨类品种，如鹿角蕨、武竹、铁线蕨等，然后保持土壤湿度、正确的浇水及定期施肥，再注意一下适当的日照就能有绿意盎然的蕨类植物供你观赏了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 2:24 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/12/n13157087.md#1" target="_blank">蕨类植物种类多好看又耐活 盆栽照顾5技巧</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/12/n13157087.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159343-shutterstock_1998562946-150x120.jpg" align ="left"></a>室内栽种蕨类植物优点很多，好养好看又耐活。首先选择最适合作为室内植物的蕨类品种，如鹿角蕨、武竹、铁线蕨等，然后保持土壤湿度、正确的浇水及定期施肥，再注意一下适当的日照就能有绿意盎然的蕨类植物供你观赏了。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 2:24 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159276.md#1" target="_blank">美国工人拆旧教堂 在墙角发现百年时间胶囊</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159276.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159300-shutterstock_32733418-150x120.jpg" align ="left"></a>美国西雅图（Seattle）一组协助拆除一座老旧教堂的工人发现，一个墙角里藏有一个时间胶囊（time capsule），内有上百年历史的文学作品、旧报纸与信件，颇具历史与文化上的价值。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 1:09 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/12/n13157353.md#1" target="_blank">每天做3个动作可瘦小腹 改善胃食道逆流</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/12/n13157353.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13157622-core-muscles-150x120.jpg" align ="left"></a>有研究发现，压力大会促使大脑偏好甜点与高脂饮食，加上久坐不动，人就容易发胖，脂肪都积存在小腹内，致使腹部压力升高，从而影响下食道括约肌的收缩，引起胃酸逆流。家医科医师推荐三个简单的核心肌群动作，每天做可以有效增肌瘦小腹，改善胃食道逆流问题。1. 棒式姿势。2. 改良式仰卧起坐。3. 训练腹肌姿势。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 6:32 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/11/n13153360.md#1" target="_blank">从众心理？多伦多温哥华房市7月同步上涨</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/11/n13153360.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13153420-IMG_2151-150x120.jpg" align ="left"></a>最新数据显示，加拿大最重要、常常引领走势的两大房市——多伦多和温哥华房市，7月表现都不同寻常，因为这两大房市同步上涨，这可能是买家从众心理所致。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月12日 10:56 PM			</td></tr>
