--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -19,8 +19,8 @@
 <h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/10/n13153150.md#1" target="_blank">Delta变种攻年轻人心脏 专家分析2原因</a><br></h3>
 <h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/11/n13155488.md#1" target="_blank">别被“体重”迷惑了 身体这7大数值更重要</a><br></h3>
 <h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/12/n13157353.md#1" target="_blank">每天做3个动作可瘦小腹 改善胃食道逆流</a><br></h3>
-<h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/12/n13157618.md#1" target="_blank">【重播】美国逾30%未接种疫苗 3大主要原因</a><br></h3>
 <h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159371.md#1" target="_blank">50%的人本就能抗新冠 天然免疫胜过疫苗？</a><br></h3>
+<h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13160360.md#1" target="_blank">【直播】Delta多地传播 哪种防疫方式有效？</a><br></h3>
 <h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/2/n13133358.md#1" target="_blank">咖啡怎么喝更养生？多加入这些食材</a><br></h3>
 <h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/3/n13135861.md#1" target="_blank">【直播】肥胖水肿 易感染新冠？教你除湿一身轻</a><br></h3>
 <h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/5/n13142065.md#1" target="_blank">立秋养生哪类食物要少吃？吃对润肺不怕燥</a><br></h3>
