--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -3,7 +3,7 @@
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159618.md#1" target="_blank">“别无选择” 大陆多所民办学校被政府接管</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159618.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13146589-GettyImages-107502021-600x400-150x120.jpg" align ="left"></a>据外媒披露，过去3个月里，在不提供补偿的情况下，中共各地政府有关部门已经接管了至少13所营利性的小学、初中以及一所高中。被迫将学校移交给政府的学校的所有人无奈表示“别无选择”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 4:49 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159264.md#1" target="_blank">美军上将：应对中共核威胁 美须强化威慑力</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159264.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159284-210729-M-M0891-1013-150x120.jpeg" align ="left"></a>美军战略司令部司令理查德（Charles Richard）上将表示，中共迅速扩充核武库，恐使美军失去战略威慑力，须积极应对。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 2:43 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159185.md#1" target="_blank">专访美智库主席：中国没有真正的资本主义</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159185.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159270-2015-robert-atkinson-150x120.jpg" align ="left"></a>中国有私人企业，但是经理人没有自主权。中国公司到美国上市，美国人买了股票却对公司没有所有权。美国智库主席说，这样的怪像，皆因为中国没有真正的资本主义。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 1:46 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13158773.md#1" target="_blank">分析：习近平当局伸出干预市场的第三只手</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13158773.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/12/7fd102fa91e4776fb275d1eefdb908ee-600x400-150x120.jpg" align ="left"></a>今年以来，当局发起的监管风暴斩落不少明星企业。现在官媒亦加入这场惊弓之鸟的游戏，一篇评论瞬间令成百上千亿元的市场价值灰飞烟灭。中国产业界陷入风声鹤唳的惊恐中，而世界或将面对中共发展经济的一个必然恶果，即媒体舆论已成为干预或破坏经济的“第三只手”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 12:49 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13158773.md#1" target="_blank">分析：习近平伸出干预市场的第三只手</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13158773.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/12/7fd102fa91e4776fb275d1eefdb908ee-600x400-150x120.jpg" align ="left"></a>今年以来，当局发起的监管风暴斩落不少明星企业。现在官媒亦加入这场惊弓之鸟的游戏，一篇评论瞬间令成百上千亿元的市场价值灰飞烟灭。中国产业界陷入风声鹤唳的惊恐中，而世界或将面对中共发展经济的一个必然恶果，即媒体舆论已成为干预或破坏经济的“第三只手”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 12:49 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159051.md#1" target="_blank">【一线采访】扬州高风险区居民曝封锁细节</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13159051.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159099-IMG_7064-150x120.jpg" align ="left"></a>江苏扬州市的疫情仍然以每天两位数的速度在持续增长。位于该市双桥街道武塘社区的四季园小区一直处于高风险区，一位业主同时也是一名志愿者靳江（化名）向大纪元记者透露了该小区的隔离封闭情况。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 11:54 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13158797.md#1" target="_blank">强调对等 美指奥斯汀应同中共军委副主席通话</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/13/n13158797.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13150898-GettyImages-1329917361-150x120.jpg" align ="left"></a>周三（8月11日），美国国防部发言人柯比表示，防长奥斯汀上任以来，尚未和中共军方高级官员举行会谈。柯比再次重申，与奥斯汀对等的中共国防官员是中央军委会副主席，而不是国防部长。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 10:25 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/12/n13157948.md#1" target="_blank">【新闻看点?】张文宏遭党媒追打 谭德塞语出惊人</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/8/12/n13157948.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13158684-0813-DJY-150x120.jpg" align ="left"></a>疫情和台湾女生。疫情是浙江宁波舟山港发现疫情后关闭了，这个后续影响很大。世卫组织总干事谭德塞说，明年初的病例数字可能就会超过3亿。但是类似的这种话，在中国讲是有危险的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 9:31 AM							</td></tr>
