--- a/gb/nf3046_4.md
+++ b/gb/nf3046_4.md
@@ -52,7 +52,7 @@
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/4/20/n12893690.md#1" target="_blank">王友群：杨雄等五名“上海帮”高官的下场</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/4/20/n12893690.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12893693-42-01-1-600x400-150x120.jpeg" align ="left"></a>4月12日，以江泽民、曾庆红为首的中共“上海帮”的又一名高官、原上海市长杨雄，因“病亡”退出历史舞台。这对“上海帮”无疑是一个新的打击。下面，盘点一下五名“上海帮”高官的下场。
 一、原上海市长杨雄猝死
 据自媒体人赵培爆料，4月12日，杨雄出去喝酒，突然心脏出现问题，朋友把他送到附近的华山医院，去了后只说是重要人物，没通报官职，也没带高官就医的“红卡”，值.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月21日 1:21 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/4/19/n12891450.md#1" target="_blank">一家三口死于中共迫害 大陆移民三退表心迹</a><br></h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/4/19/n12891450.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12891523-93a75275d9e0c51042929f3df3bb7ac8-150x120.jpg" align ="left"></a>4月18日在纽约民众纪念“4?25”和平上访22周年的集会上，大陆移民黄莹洲女士领取了三退证书。她高兴地表示，“愿大家都知道我退出了（共产党相关组织）”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月21日 2:55 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/5/20/n12962141.md#1" target="_blank">三退声明精选（2021/05/19）</a><br></h3>当初加入团员是为了以后工作的便捷，本身目的就不单纯，再就是自己没有明辨是非的能力，而受到共的蛊骗，现在就这个机会表达我的歉意与一直以来无法诉说的想法：共做了许多惨绝人寰的事情，想要用这种形式来维持政权是行不通的，现在尽管还有许多爱党人士，但我在保证自己安全的情况下，与同学分析共对我们的迫害与共为维护统治而采取的专政给人民造成的重大灾害！本人在此郑重声明，本人.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月20日 11:19 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/5/16/n12954229.md#1" target="_blank">王友群：批“党天下”的大右派储安平失踪之谜</a><br></h3>今天的中共党章白纸黑字写着：“党政军民学，东西南北中，党是领导一切的”。这句话是什么意思？很简单，中共通过其党章向全世界表明：中共在中国搞的就是“党天下”。
 
 然而，在1957年毛泽东发动反右派运动时，时任《光明日报》总编辑储安平，就因为批评中共搞“党天下”，受到“深揭猛批”和严厉惩罚。1966年文革爆发后，储安平再遭迫害，后失踪，活不见人，死不见尸。.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年05月17日 8:21 AM							</td></tr>
