--- a/gb/nf3046_2.md
+++ b/gb/nf3046_2.md
@@ -39,6 +39,7 @@
 从迫害的第一天起至2021年的今天，中共对法轮功从来就没有讲过什么法律。
 
 中共迫害法轮功的依据是：1999年4月25日江泽民在致中共政治局常委的信中提出的“战胜法轮功.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月15日 8:37 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/9/n13077477.md#1" target="_blank">三退声明精选（2021/07/08）</a><br></h3>从小到大，从在学校读书到长大了走进社会，一直被中共的洗脑包围，学校里有洗脑教育，走进社会后周围有洗脑的宣传，现在看清了中共的邪恶面目，决定退出邪恶的中共。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月09日 9:44 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/6/n13070468.md#1" target="_blank">三退声明精选（2021/07/05）</a><br></h3>百年变局，风起云涌。法网恢恢，疏而不漏。今日之邪党，固再厉害，再疯狂，再野蛮，再流氓，也终究不过是一场大梦。做着春秋大梦，自己欺骗自己，实为愚蠢至极！待梦醒之时，就是你邪党垮台之日。你说教的功夫再了得，洗脑的方式再邪恶，渗透的方式再高明，压榨老百姓的手段再聪明，也终究不过是聪明反被聪明误，光明与真相终究会到来。民族会觉醒，人民会反抗，不过只是时间问题而已。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月06日 11:10 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/5/n13067828.md#1" target="_blank">参考资料：纵观天下（2021年7月传单/传真）</a><br></h3>一生中最后悔的事：入党 亲见奇石 印证真相明天意 中共的邪与骗 药学博士病缠身 幸遇奇功顽疾消 篡改党史 抹不掉罪恶痕迹 灭门血案的警示......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月05日 11:27 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/7/5/n13067771.md#1" target="_blank">三退声明精选（2021/07/04）</a><br></h3>中国共产党的百年历史就是个杀人史，历史上中国苦难同胞暗夜哭声至今不绝于耳，痛苦受难的百姓，至今摆脱不了噩梦。被严厉打压迫害，连喊冤都喊不出来的禁忌族群有多少？恶党表面上话说的冠冕堂皇，却总是睁眼说瞎话。本人不屑为其一员，在此声明三退，划清界线，祝愿中国人民早日脱离苦海！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年07月05日 10:52 AM							</td></tr>
@@ -63,6 +64,5 @@
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/6/19/n13032351.md#1" target="_blank">三退声明精选（2021/06/18）</a><br></h3>我是国企职工，近年来，通过多种管道了解到中共罪恶滔天，当权者贪污腐败，自愿退出这个邪恶的组织，退出入过的党团队。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月19日 11:01 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/6/18/n13029929.md#1" target="_blank">三退声明精选（2021/06/17）</a><br></h3>这些年翻墙我了解了共匪的意识形态和体制，是一个反人类的东西，是要消灭个人的存在和人类文明的邪恶势力。且正常社会是需要还给每一个人财产权的，而共匪则要完全剥夺这个权利，去奴役所有人。认识到这一点，我决定在这里发表声明，完全退出中共的党团队及其附属的一切组织。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月18日 9:08 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/6/15/n13022474.md#1" target="_blank">三退声明精选（2021/06/14）</a><br></h3>近期南方地区又出现了32年前六四时候的场景，对于我们中国人来说：中共政权在此武力镇压的行径对于我们全中国人都是一件务必耻辱的事情！！！！中国共产党不是说我们年轻人是祖国的未来、是共产主义的接班人吗？？？？怎么在此这样的对待年轻学生的和平示威？？！！真的，我这次是真心对中国共产党彻彻底底的失望了！！！！如果说疫情时期的特殊管理我还能够忍受，但看到当下南方地区正.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月15日 11:22 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/21/6/12/n13016766.md#1" target="_blank">三退声明精选（2021/06/11）</a><br></h3>我是一个地方医生，抱着治病救人崇高信念而读了医学院，没想到在学校学习的不是治病救人而是邪党害人，因为上学时受邪党文化哄骗，在同事蛊惑下加入了邪共团体，以为可以更好服务病人，谁知医院上下充斥万恶党文化的贿赂回扣贪污，病人痛苦不堪，身为医者看在眼里痛在内心，在一个病人百般折磨被邪共榨干钱财而过世后我终于下定决心彻底和邪党决裂，不再与共产党医院蛇鼠一窝坑害百姓，我.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年06月12日 9:50 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/vbtdby377/djy/blob/master/gb/nf3046.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/vbtdby377/djy/blob/master/gb/nf3046.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/vbtdby377/djy/blob/master/gb/nf3046_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/vbtdby377/djy/blob/master/gb/nf3046_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/vbtdby377/djy/blob/master/gb/nf3046_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/vbtdby377/djy/blob/master/gb/nf3046_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/vbtdby377/djy/blob/master/gb/nf3046_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/vbtdby377/djy/blob/master/gb/nf3046_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/vbtdby377/djy/blob/master/gb/nf3046_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/vbtdby377/djy/blob/master/gb/nf3046_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/vbtdby377/djy/blob/master/gb/nf3046_3.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/vbtdby377/djy/blob/master/gb/nf3046_2.md#1<br><a href="https://github.com/vbtdby377/djy/blob/master/gb/nf3046_2.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/vbtdby377/djy/blob/master/gb/nf3046_2.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf3046_2.htm">https://www.epochtimes.com/gb/nf3046_2.htm</a>    （国内需<a href="https://github.com/vbtdby377/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
