--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -5,7 +5,7 @@
 <tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160158.md#1" target="_blank">【一线采访】洪水预警不及时 随州数十人遇难</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13160158.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13160161-page-150x120.jpg" align ="left"></a>8月12日，湖北随州市随县柳林镇被洪水淹没，特别是该镇中心大桥街受灾严重。由于洪水半夜袭击柳林镇，造成数十人遇难。当地民众批评，洪水快要进街前，当地政府才开始预警，也没有安排民众撤离，造成很多民众来不及逃生。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 11:25 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/4/n13139147.md#1" target="_blank">【忠义传】铁木真的福将 者勒蔑冒死救主</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/4/n13139147.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/Jelme__Genghis_Khan-150x120.jpg" align ="left"></a>塞外的大草原上，散落着大大小小的蒙古部族。南宋绍兴三十二年（1162年）的一天，居住在斡难河畔的“黄金家族”后裔——乞颜族落，迎来了一桩大喜事，首领也速该的长子降生了。这个婴儿一出生就不平凡，手中握着一块坚如红石的血块。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 10:58 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159797.md#1" target="_blank">“我们在非洲肯尼亚修炼法轮大法”</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159797.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159852-2021-8-12-rwanda-falun-gong-cultivation_01-150x120.jpeg" align ="left"></a>被联合国派驻非洲肯尼亚工作的越南人莉莉通过修炼法轮功身体健康、性格变好，家庭和睦。她的儿子、保姆、邻居都走入了修炼并身心受益。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 10:44 PM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159982.md#1" target="_blank">【疫情8.13】日本疫情狂飙 新确诊首破2万</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159982.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13160728-GettyImages-1333492979-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周五（8月13日）清晨5:00，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过2.05亿（205,462,557）例，死亡人数超过433万（4,335,111）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 7:22 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159982.md#1" target="_blank">【疫情8.13】白宫拨款助农村医院抗击病毒</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159982.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/white-house-1953465_1920-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周五（8月13日）清晨5:00，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过2.05亿（205,462,557）例，死亡人数超过433万（4,335,111）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 7:22 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159618.md#1" target="_blank">“别无选择” 大陆多所民办学校被政府接管</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159618.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13146589-GettyImages-107502021-600x400-150x120.jpg" align ="left"></a>据外媒披露，过去3个月里，在不提供补偿的情况下，中共各地政府有关部门已经接管了至少13所营利性的小学、初中以及一所高中。被迫将学校移交给政府的学校的所有人无奈表示“别无选择”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 4:49 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159264.md#1" target="_blank">美军上将：应对中共核威胁 美须强化威慑力</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159264.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159284-210729-M-M0891-1013-150x120.jpeg" align ="left"></a>美军战略司令部司令理查德（Charles Richard）上将表示，中共迅速扩充核武库，恐使美军失去战略威慑力，须积极应对。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 2:43 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159185.md#1" target="_blank">专访美智库主席：中国没有真正的资本主义</a><br></h3><a href="https://github.com/nqqppy374/djy/blob/master/gb/21/8/13/n13159185.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13160683-Untitled-1-150x120.jpg" align ="left"></a>中国有私人企业，但是经理人没有自主权。中国公司到美国上市，美国人买了股票却对公司没有所有权。美国智库主席说，这样的怪像，皆因为中国没有真正的资本主义。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月13日 1:46 PM							</td></tr>
