--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -16,11 +16,11 @@
 <tr><td><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/6/14/n13022051.md#1" target="_blank">去除电风扇、纱窗灰尘很简单 清洁妙招学起来</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/6/14/n13022051.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13022385-shutterstock_469817585-320x200.jpg"></a></td></tr>
 <tr><td><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/6/12/n13017726.md#1" target="_blank">牛奶补钙效果比豆浆强 低脂、全脂区别大公开</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/6/12/n13017726.md#1" target="_blank"><img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13021594-milk_279701309-320x200.jpg"></a></td></tr>
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
-<h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/10/n13153150.md#1" target="_blank">Delta变种攻年轻人心脏 专家分析2原因</a><br></h3>
 <h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/11/n13155488.md#1" target="_blank">别被“体重”迷惑了 身体这7大数值更重要</a><br></h3>
 <h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/12/n13157353.md#1" target="_blank">每天做3个动作可瘦小腹 改善胃食道逆流</a><br></h3>
 <h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13159371.md#1" target="_blank">天然免疫力比疫苗更强大？</a><br></h3>
 <h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13160360.md#1" target="_blank">【重播】Delta传多地 中国防疫方式有效吗？</a><br></h3>
+<h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13160841.md#1" target="_blank">FDA批准新疗法 可预防新冠？2类人适用</a><br></h3>
 <h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/2/n13133358.md#1" target="_blank">咖啡怎么喝更养生？多加入这些食材</a><br></h3>
 <h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/3/n13135861.md#1" target="_blank">【直播】肥胖水肿 易感染新冠？教你除湿一身轻</a><br></h3>
 <h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/5/n13142065.md#1" target="_blank">立秋养生哪类食物要少吃？吃对润肺不怕燥</a><br></h3>
