--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -5,6 +5,7 @@
 &nbsp;
 2022年款Outla.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 1:22 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161721.md#1" target="_blank">【美食天堂】泰式卤肉卤蛋做法～太正宗了！</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161721.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161799-Thai-Braised-Pork-Belly1-150x120.jpeg" align ="left"></a>泰式卤肉卤蛋做法～五花肉这样做最好吃！太正宗了！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 1:01 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161462.md#1" target="_blank">谷歌趋势热门度假地 多伦多居加国之首</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/14/n13161462.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13076960-shutterstock_1368288917-150x120.jpg" align ="left"></a>据CityNews报导，随着世界各地的旅行限制逐渐放宽，渴望旅行的加拿大人正在挑选他们的下一个度假地。谷歌趋势（Google Trends）报告的加拿大热门度假地中，前10名国内旅游目的地中，多伦多居首，第2至第10名分别为温哥华、卡尔加里、蒙特利尔、尼亚加拉瀑布、埃德蒙顿、魁北克城、Whistler、班芙和渥太华。.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 9:46 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/7/n13145630.md#1" target="_blank">10个月瘦25公斤 医师这样调出不易胖体质</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/7/n13145630.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13150438-shutterstock_68305150-150x120.jpg" align ="left"></a>日本减肥名医工藤孝文医师曾因工作忙碌，无法好好用餐和运动，体重增加到92 公斤。后来，擅用自己的中医专长，仅10个月左右就降至67公斤。他指出，“一日三餐均衡饮食、适度运动”对他是困难的事，因此一直在寻找适合自己的减肥方式。有3种因素会造成肥胖体质，中药对症调理有助减肥，变成难以增重的体质。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 6:19 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13161176.md#1" target="_blank">延长汽车保修十件事（下）</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13161176.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161184-rrevq20myncap5star10041902-150x120.jpg" align ="left"></a>（续上周）近年来，许多制造商的新车保修范围有所下降。它们已经从五年或?60,000英里（100,000公里）的旧标准下降到三年或37,500英里（60,000公里）。这一变化让许多人想知道他们是否应该购买延长保修。在你做出有关延长保修的任何决定之前，请考虑以下10件事情。
 8)?等待工厂保修到期
@@ -42,7 +43,6 @@ Delta变种占全球82%！全球疫情将面临什么挑战？......<br><img ali
 
 人人都有的天然免疫力，能和疫苗媲美？1类人可能要打第三针！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月11日 8:14 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/11/n13154551.md#1" target="_blank">双胞胎的指纹会一模一样吗？</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/11/n13154551.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13154557-shutterstock_1471128911-150x120.jpg" align ="left"></a>同卵双生的双胞胎不但容貌很像，就连体型、动作和声音都很像，几乎就像复制人。如果他们穿着相同的服装，做相同的打扮，那真的很难让其他人分辨出谁是谁。但你可能会问，既然双胞胎就像复制人，他们的指纹会不会一模一样？能用来做身份识别吗？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月11日 5:40 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/8/n13147593.md#1" target="_blank">调整做菜的节奏 下班回家快速上菜的诀窍</a><br></h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/8/n13147593.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/07/Fotolia_46791401_Subscription_L-150x120.jpg" align ="left"></a>你是否有一种情况，下班后已经很累了，全家人却饥肠辘辘等你煮好菜饭上桌。是的！可以“叫外送”餐点，但是新冠肺炎疫情仍旧延烧，叫外卖难免会有卫生安全的疑虑，再加上外食吃久也会腻味。要怎么样让自己下厨备料不会手忙脚乱，而且快速上桌也不消耗体力，重点是食物又好吃！让我们看看料理研究家“有元叶子”怎么建议。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月11日 5:00 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/jwwcna340/djy/blob/master/gb/21/8/13/n13161199.md#1" target="_blank">汽车维修问与答 &#8211; 机油问题</a><br></h3>读者忠和问：李先生您好，请教几个机油问题：
 1) Toyota?Altis?2013年，原厂手册建议机油用5W30，但最近保养厂却换5w50。是否可以？请给个建议。现我有闲置4瓶10w40，可以拿来用吗？
 2) Toyota RAV4 Adventure 2000cc 2021年，原厂手册建议机油用0w20，但机油.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 5:34 AM			</td></tr>
