--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -16,6 +16,7 @@
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161416.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2008/07/shutterstock_659620672-320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161416.md#1" target="_blank">岳阳楼市限价 房企打折不得低于备案价85％</a><br></h3>湖南省岳阳市日前发布了一份楼市限价令，和一二线城市不同的是，岳阳的......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161456.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161456.md#1" target="_blank">【翻墙必看】“防个人专断”影射谁？</a><br></h3>中共北戴河秘会期间，中共最高层突然发布文件，宣称要打造所谓“法治”......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161660.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/07/id13127158-GettyImages-1234281339-320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161660.md#1" target="_blank">分析：Delta疫情挑战中共“清零”政策</a><br></h3>Delta变种毒株正在考验中共“零容忍政策”的长期可持续性，同时还......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13158869.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/07/id13128209-GettyImages-1187434413@1200x1200-320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13158869.md#1" target="_blank">中共教育推“双减”政策所为何来</a><br></h3>中国的中小学教师们在7月30日以前绝不会想到自己有朝一日会因为做校......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161101.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161319-ttl7dayTzA_article-320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161101.md#1" target="_blank">【方菲访谈】专访王维洛：海绵城市是伪命题（2）</a><br></h3>美东时间周五（8月13日）晚上9:30，新唐人《方菲访谈》节目主持......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161557.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161557.md#1" target="_blank">三退声明精选（2021/08/13）</a><br></h3>年少懵懂不知道，吾辈被迫地，强迫加入了少先队及共青团。幡然悔悟还不......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161371.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2019/02/610130108151779-600x400-320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161371.md#1" target="_blank">高智晟被失踪四年 外界吁国际制裁中共</a><br></h3>“中国的良心”高智晟律师被失踪整整四年了，他的妻子耿和发出声明不会......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
@@ -28,6 +29,5 @@
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161004.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13153424-GettyImages-1210149337-600x400-320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161004.md#1" target="_blank">美国调查病毒源头 专家：中共甩锅不会奏效</a><br></h3>美国情报部门调查中共病毒（新冠病毒）起源的90天期限将至，就在此时......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161068.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13142357-GettyImages-1178993487-600x400-320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161068.md#1" target="_blank">美中能否在竞争同时进行合作 专家分析</a><br></h3>美中双方在香港、台湾和人权问题等多方面发生冲突的同时，也对外释放信......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161003.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161103-GettyImages-484755619-320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161003.md#1" target="_blank">万隆辞任万洲国际行政总裁 子女继承成焦点</a><br></h3>中国亿万富翁、猪肉生产商万洲国际老板万隆周四（8月12日）辞任行政......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13160165.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/08/id13160528-7e1296ecba058b8985d4d33dabd200a9-320x200.jpg" align ="left"></a><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13160165.md#1" target="_blank">2021上半年 大庆法轮功学员遭迫害概述</a><br></h3>据明慧网不完全统计，2021年上半年，大庆市法轮功学员中1人被监狱......<br><img align="bottom" src="https://raw.githubusercontent.com/ycpube385/www/master/t/ntdtv/time.gif">08月14日</td></tr>
 <tr><td><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nsc413_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ycpube385/djy/blob/master/gb/nsc413_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ycpube385/djy/blob/master/gb/nsc413.md#1<br><a href="https://github.com/ycpube385/djy/blob/master/gb/nsc413.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ycpube385/djy/blob/master/gb/nsc413.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nsc413.htm">https://www.epochtimes.com/gb/nsc413.htm</a>    （国内需<a href="https://github.com/ycpube385/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
