--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -20,7 +20,7 @@
 <h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/12/n13157353.md#1" target="_blank">每天做3个动作可瘦小腹 改善胃食道逆流</a><br></h3>
 <h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13159371.md#1" target="_blank">天然免疫力比疫苗更强大？</a><br></h3>
 <h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13160360.md#1" target="_blank">【重播】Delta传多地 中国防疫方式有效吗？</a><br></h3>
-<h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13160841.md#1" target="_blank">FDA批准新疗法 可预防新冠？2类人适用</a><br></h3>
+<h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13160841.md#1" target="_blank">FDA批准新疗法 可预防新冠？两类人适用</a><br></h3>
 <h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/2/n13133358.md#1" target="_blank">咖啡怎么喝更养生？多加入这些食材</a><br></h3>
 <h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/3/n13135861.md#1" target="_blank">【直播】肥胖水肿 易感染新冠？教你除湿一身轻</a><br></h3>
 <h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/5/n13142065.md#1" target="_blank">立秋养生哪类食物要少吃？吃对润肺不怕燥</a><br></h3>
