--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -3,7 +3,7 @@
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161993.md#1" target="_blank">河南巩义农村再遭遇洪灾 民众批政府无能</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161993.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13162013-d35abeecddcac22b25fce567368211b9-150x120.jpg" align ="left"></a>8月12日夜间到13日凌晨，河南郑州巩义市突发暴雨，记者14日上午采访康店镇村民，村民反映，上次7月20日暴雨，水库泄洪，造成特大洪灾，损失惨重，当地政府无能，全村已经瘫痪超过三周，到现在还停水停电。昨天一场暴雨，再次受灾。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 5:10 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161101.md#1" target="_blank">【方菲访谈】专访王维洛：海绵城市是伪命题（2）</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161101.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161319-ttl7dayTzA_article-150x120.jpg" align ="left"></a>美东时间周五（8月13日）晚上9:30，新唐人《方菲访谈》节目主持人方菲女士专访著名水利专家王维洛先生。新唐人、大纪元将进行首播，敬请收看。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 10:30 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161371.md#1" target="_blank">高智晟被失踪四年 外界吁国际制裁中共</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161371.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/02/610130108151779-600x400-150x120.jpg" align ="left"></a>“中国的良心”高智晟律师被失踪整整四年了，他的妻子耿和发出声明不会放弃他。同时，外界寻找高智晟、声援高智晟，要求国际社会制裁中共的呼声愈加强烈。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 9:41 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161004.md#1" target="_blank">美国调查病毒源头 专家：中共甩锅不会奏效</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161004.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13153424-GettyImages-1210149337-600x400-150x120.jpg" align ="left"></a>美国情报部门调查中共病毒（新冠病毒）起源的90天期限将至，就在此时，中共频繁在病毒起源问题上针对美国。美国陆军研究所前病毒学研究员林晓旭博士、美国生物科技公司副总怀海英向大纪元记者分析表示，中共甩锅不会奏效，它的目地是利用病毒溯源问题混淆视听，转移其最害怕的隐瞒疫情追责焦点。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 6:40 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161004.md#1" target="_blank">美国调查病毒源头 专家：中共甩锅不会奏效</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161004.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13153424-GettyImages-1210149337-600x400-150x120.jpg" align ="left"></a>美国情报部门调查中共病毒（新冠病毒）起源的90天期限将至，就在此时，中共频繁在病毒起源问题上针对美国。美国陆军研究所前病毒学研究员林晓旭博士、美国生物科技公司副总怀海英向大纪元记者分析表示，中共甩锅不会奏效，它的目的是利用病毒溯源问题混淆视听，转移其最害怕的隐瞒疫情追责焦点。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 6:40 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161085.md#1" target="_blank">为墨西哥毒枭换汇 华人洗钱组织的牢狱路</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/14/n13161085.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13161094-151439-150x120.jpg" align ="left"></a>中国人对洗钱大多没什么概念，华人圈子里很多私下换汇的，以为只是转移资金的一种方式，不是什么严重的犯罪行为，对社会也没什么危害，其实大错特错。最近一起案例揭示，私下换汇很容易卷入毒枭洗钱的犯罪案件。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 6:30 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161068.md#1" target="_blank">美中能否在竞争同时进行合作 专家分析</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13161068.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13142357-GettyImages-1178993487-600x400-150x120.jpg" align ="left"></a>美中双方在香港、台湾和人权问题等多方面发生冲突的同时，也对外释放信号称，不排除两国在气候等议题上进行合作。两国是否能够真正合作，引发关注。中国政经问题专家裴敏欣（Minxin Pei）教授认为，美中目前无信任，任何合作都将是困难的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 5:04 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13159224.md#1" target="_blank">涉售1.3亿美元假货及洗钱 纽约四华人被捕</a><br></h3><a href="https://github.com/ycpube385/djy/blob/master/gb/21/8/13/n13159224.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/08/id13159226-151416-150x120.jpg" align ="left"></a>纽约东区联邦检察官12日指控七人从中国进口假货到美国，在车间为这些商品贴上正品的标签，然后出售给零售和批发商。他们被控串谋贩卖假货及洗钱罪名。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年08月14日 12:52 AM							</td></tr>
